2008-01-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gspawn.c (fdwalk): Don't set open_max to
	RLIM_INFINITY.  (#495589, Tommi Komulainen)

2007-12-19  Emmanuele Bassi  <ebassi@gnome.org>

	Merged from trunk:

	* glib/gtimer.c (g_time_val_from_iso8601): Fix the date validation
	check. (#503029)

	* tests/testglib.c (various_string_tests): Add an invalid date
	for testing the above fix.

2007-12-13  Bastien Nocera  <hadess@hadess.net>

	* glib/gtimer.c: (g_time_val_from_iso8601):
	Don't try to parse dates that start with anything but a
	digit, a plus or a minus sign, as those can't be valid
	ISO8601 dates (Closes: #503029)

2007-12-03  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* glib/gkeyfile.c: Don't call g_get_language_names() per-key.
	(#500638, Michael Meeks)

	* glib/gkeyfile.c: Add a hash table to speed up group lookups,
	which GKeyFile does quite a lot.

2007-12-03  Marco Barisione <marco@barisione.org>

	Backport from trunk:

	* glib/gregex.c: Make compilation error messages translatable.
	(#482313, Morten Welinder)

2007-11-27  Tor Lillqvist  <tml@novell.com>

	Merge from trunk:

	* glib/gutils.c (_glib_get_locale_dir) [Win32]: Use either
	lib/locale or share/locale depending on which one is in
	GLIB_LOCALE_DIR. When the configury recognizes GNU gettext (based
	on the _nl_msg_cat_cntr variable, eek), share/locale gets used.

	* glib-zip.in: Likewise, look for message catalogs either in
	lib/locale or share/locale.

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.4 ===

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* tests/base64-test.c: Fix memory overrun.

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2007-11-24  Matthias Clasen  <mclasen@redhat.com>

	Merge from trunk:

	* glib/gbase64.c (g_base64_encode): Don't refuse to encode
	a single byte.  (Milan Crha)
